--- a/styles.css
+++ b/styles.css
@@ -1,440 +1,113 @@
-/* Desktop */
-
-@media only screen and (min-device-width: 1025px) {
-  html,
-  body,
-  element {
-    max-width: 100vw;
-    overflow-x: hidden;
-    margin: 0px;
-    padding: 0px;
-  }
-
-  body {
-    background-color: #e0e8ff;
-    margin-bottom: 14.267vh;
-  }
-
-  .main {
-    width: 100vw;
-    height: 100vh;
-    background-color: #e0e8ff;
-    margin-bottom: 14.2654vh;
-  }
-
-  .middle-div {
-    width: 31.22vw;
-    height: 99.584vh;
-    margin: 14.4vh 34.375vw 0;
-    border-radius: 20px;
-    box-shadow: 0 40px 40px -20px rgb(13 48 189 / 15%);
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    position: absolute;
-  }
-  .pattern {
-    position: absolute;
-    background-color: #e0e8ff;
-    width: 100vw;
-    height: 61vh;
-    padding-bottom: 14.39vh;
-  }
-
-  .music-flatline {
-    width: 31.25vw;
-    height: 31.5vh;
-    margin: 0 0 6.419vh;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-  }
-
-  .middle-div-part2 {
-    width: 31.24vw;
-    height: 104.584vh;
-    display: flex;
-    flex-direction: column;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-  }
-
-  .order-summary {
-    width: 369px;
-    height: 53vh;
-    margin: 0.3vh 40px 17px;
-    font-family: "Red Hat Display", sans-serif;
-    font-size: 28px;
-    text-align: center;
-    color: #1f2e55;
-    line-height: 37.04px;
-  }
-
-  .desc {
-    position: absolute;
-    height: 78px;
-    left: 11%;
-    right: 10.67%;
-    top: calc(50% - 78px / 2 + 11px);
-    font-family: "Red Hat Display", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    text-align: center;
-    color: #717fa6;
-  }
-
-  .plan-container {
-    height: 13.7vh;
-    width: 24.6vw;
-    display: flex;
-    margin-top: -33.7vh;
-    margin-left: 3.3vw;
-    border-radius: 11px;
-    background-color: #f7f9ff;
-  }
-
-  .music-img-div {
-    height: 13.7vh;
-    width: 6vw;
-
-    display: flex;
-  }
-
-  .music-img {
-    position: absolute;
-    margin-left: 5.5%;
-    margin-top: 5.2%;
-  }
-  .inside-plan {
-    height: 13.7vh;
-    width: 20vw;
-    display: flex;
-  }
-  .year-plan {
-    width: 92px;
-    height: 21px;
-    font-family: "Red Hat Display", sans-serif;
-    font-size: 16px;
-    font-weight: 900;
-    text-align: left;
-    color: #1f2e55;
-    margin-top: 3.4vh;
-    margin-left: 0.8vw;
-  }
-
-  .number-plan {
-    width: 92px;
-    height: 21px;
-    font-family: "Red Hat Display", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    text-align: left;
-    color: #717fa6;
-    position: absolute;
-    margin-top: 7.421vh;
-    margin-left: 0.76vw;
-  }
-  .change {
-    position: absolute;
-    height: 19px;
-    left: 72.4%;
-    top: calc(50% - -31% / 2 + 0.5px);
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 19px;
-    font-family: "Red Hat Display", sans-serif;
-    text-decoration-line: underline;
-    color: #382ae1;
-    font-style: normal;
-  }
-
-  .change:hover {
-    position: absolute;
-    height: 19px;
-    left: 72.4%;
-    top: calc(50% - -31% / 2 + 0.5px);
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 19px;
-    font-family: "Red Hat Display", sans-serif;
-    color: #766cf1;
-    font-style: normal;
-  }
-
-  .payment-button {
-    width: 24.6vw;
-    height: 7.1vh;
-    margin: 32px 49px;
-    padding: 15px 99px;
-    border-radius: 11px;
-    box-shadow: 0 20px 20px 0 rgb(56 42 225 / 19%);
-    background-color: #382ae1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .payment-button:hover {
-    width: 24.6vw;
-    height: 7.1vh;
-    margin: 32px 49px;
-    padding: 15px 99px;
-    border-radius: 11px;
-    box-shadow: 0px 20px 20px rgba(56, 42, 225, 0.190291);
-    background-color: #766cf1;
-    display: flex;
-    flex-direction: column;
-  }
-  .button-text {
-    font-family: "Red Hat Display", sans-serif;
-    font-size: 15px;
-    font-weight: 900;
-    text-align: left;
-    color: #fff;
-  }
-
-  .Cancel-Order {
-    width: 96px;
-    height: 20px;
-    font-family: "Red Hat Display", sans-serif;
-    font-size: 15px;
-    font-weight: 900;
-    text-align: left;
-    color: #717fa6;
-    margin-left: 12.2vw;
-    margin-top: 1px;
-  }
-
-  .Cancel-Order:hover {
-    width: 96px;
-    height: 20px;
-    font-family: "Red Hat Display", sans-serif;
-    font-size: 15px;
-    font-weight: 900;
-    text-align: left;
-    color: #1f2e55;
-    margin-left: 12.2vw;
-    margin-top: 1px;
-  }
+html,
+body {
+  margin: 0px;
+  padding: 0px;
 }
 
-/* Mobile */
+body {
+  background-color: #e0e8ff;
+  background-image: url(images/pattern-background-desktop.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-family: "Red Hat Display", sans-serif;
+}
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  html,
-  body,
-  element {
-    max-width: 100vw;
-    overflow-x: hidden;
-    margin: 0px;
-    padding: 0px;
-  }
+.card {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 1.1rem;
+  background-color: #fff;
+  max-width: 28.2rem;
+  margin-bottom: 2.9rem;
+  margin-top: 2.9rem;
+  box-shadow: 0 2.5rem 2.5rem -1.25rem rgba(13, 48, 189, 0.15);
+}
 
-  body {
-    background-color: #e0e8ff;
-    padding-bottom: 8.745vh;
-  }
+.photo {
+  border-top-left-radius: 1.1rem;
+  border-top-right-radius: 1.1rem;
+}
 
-  .main {
-    width: 100vw;
-    height: 100vh;
-    background-color: #e0e8ff;
-  }
+.order-text {
+  color: #1f2e55;
+  flex-direction: column;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 900;
+  margin: 2.81rem 3rem 0rem;
+}
 
-  .middle-div {
-    width: 87.22vw;
-    height: 70vh;
-    margin: 8.59vh 6.375vw 0;
-    border-radius: 20px;
-    box-shadow: 0 40px 40px -20px rgb(13 48 189 / 15%);
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    position: absolute;
-  }
-  .pattern {
-    position: absolute;
-    background-color: #e0e8ff;
-    width: 100vw;
-    height: 61vh;
-  }
+.desc-text {
+  margin: 1rem 3rem 1.8rem;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.63;
+  text-align: center;
+  color: #717fa6;
+}
 
-  .music-flatline {
-    width: 87vw;
-    height: 20vh;
-    margin: 0 0 3.419vh;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-  }
+.plan-container {
+  border-radius: 11px;
+  background-color: #f7f9ff;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  padding: 1.56rem 1.5rem;
+}
 
-  .middle-div-part2 {
-    width: 87.24vw;
-    height: 51.584vh;
-    display: flex;
-    flex-direction: column;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-  }
+.music-img {
+  margin: 0 1.25rem 0 0;
+}
+.annual-div {
+  display: flex;
+  flex-direction: column;
+}
+.annual-text {
+  font-size: 16px;
+  margin: 0px;
+  font-weight: 900;
+  color: #1f2e55;
+}
 
-  .order-summary {
-    font-family: "Red Hat Display", sans-serif;
-    width: 263px;
-    height: 29px;
-    font-size: 22px;
-    font-weight: 900;
-    text-align: center;
-    color: #1f2e55;
-    margin-top: 0.4vh;
-    margin-left: 8.5vw;
-  }
+.price-text {
+  margin: 0.37rem 0px 0px 0px;
+  text-align: left;
+  color: #717fa6;
+  font-size: 16px;
+  font-weight: 500;
+}
 
-  .desc {
-    position: absolute;
-    left: 0.07%;
-    top: 27.5vh;
-    font-family: "Red Hat Display", sans-serif;
-    text-align: center;
-    color: #717fa6;
-    width: 263px;
-    height: 75px;
-    margin: 16px 32px 24px;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 1.67;
-  }
+.change-text {
+  margin-left: 5.875rem;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
+  color: #382ae1;
+}
 
-  .plan-container {
-    height: 9.9vh;
-    width: 74.6vw;
-    display: flex;
-    margin-top: 12.3vh;
-    margin-left: 6.3vw;
-    border-radius: 11px;
-    background-color: #f7f9ff;
-  }
+.proceed-btn {
+  margin: 1.3rem 3rem 0rem 3rem;
+  padding: 0.93rem 6.37rem;
+  border-radius: 11px;
+  box-shadow: 0 1.25rem 1.25rem 0 rgba(56, 42, 225, 0.19);
+  background-color: #382ae1;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 900;
+  text-align: left;
+  text-align: center;
+}
 
-  .music-img-div {
-    height: 10vh;
-    width: 20vw;
-    display: flex;
-  }
-
-  .music-img {
-    position: absolute;
-    margin-left: 5.5%;
-    margin-top: 5.2%;
-  }
-  .inside-plan {
-    height: 10vh;
-    width: 55vw;
-    display: flex;
-  }
-  .year-plan {
-    width: 81px;
-    height: 19px;
-    font-size: 14px;
-    font-weight: 900;
-    text-align: left;
-    color: #1f2e55;
-    font-family: "Red Hat Display", sans-serif;
-    margin-top: 2.6vh;
-    margin-left: 2.8vw;
-  }
-
-  .number-plan {
-    font-family: "Red Hat Display", sans-serif;
-    width: 81px;
-    height: 18px;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: left;
-    color: #717fa6;
-    margin-left: -21.75vw;
-    margin-top: 5.3vh;
-  }
-  .change {
-    position: absolute;
-    height: 17px;
-    left: 73%;
-    right: 0%;
-    top: 45.56vh;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 13px;
-    line-height: 17px;
-    text-decoration-line: underline;
-    font-family: "Red Hat Display", sans-serif;
-    color: #382ae1;
-  }
-
-  .change:hover {
-    position: absolute;
-    height: 19px;
-    left: 72.4%;
-    top: calc(50% - -31% / 2 + 0.5px);
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 19px;
-    font-family: "Red Hat Display", sans-serif;
-    color: #766cf1;
-  }
-
-  .payment-button {
-    width: 24.6vw;
-    height: 6.1vh;
-    margin: 26px 23px;
-    padding: 4px 138px;
-    border-radius: 11px;
-    box-shadow: 0 20px 20px 0 rgb(56 42 225 / 19%);
-    background-color: #382ae1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .payment-button:hover {
-    width: 24.6vw;
-    height: 6.1vh;
-    margin: 26px 23px;
-    padding: 4px 138px;
-    border-radius: 11px;
-    box-shadow: 0px 20px 20px rgba(56, 42, 225, 0.190291);
-    background-color: #766cf1;
-    display: flex;
-    flex-direction: column;
-  }
-  .button-text {
-    width: 150px;
-    height: 20px;
-    font-size: 15px;
-    font-weight: 900;
-    text-align: left;
-    color: #fff;
-    font-family: "Red Hat Display", sans-serif;
-    margin-left: -19.8vw;
-    margin-top: 1vh;
-  }
-
-  .Cancel-Order {
-    font-family: "Red Hat Display", sans-serif;
-    width: 96px;
-    height: 20px;
-    font-size: 15px;
-    font-weight: 900;
-    text-align: left;
-    color: #717fa6;
-    margin-left: 30.6vw;
-    margin-top: -0.3vh;
-  }
-
-  .Cancel-Order:hover {
-    font-family: "Red Hat Display", sans-serif;
-    width: 96px;
-    height: 20px;
-    font-size: 15px;
-    font-weight: 900;
-    text-align: left;
-    color: #1f2e55;
-    margin-left: 30.6vw;
-    margin-top: -0.3vh;
-  }
+.cancel-text {
+  margin: 2rem 0px 3rem 0px;
+  font-size: 15px;
+  font-weight: 900;
+  align-self: center;
+  color: #717fa6;
 }
