--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   font-family: "Red Hat Display", sans-serif;
 }
 
-.card {
+.card-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
