--- a/styles.css
+++ b/styles.css
@@ -38,11 +38,13 @@ body {
   text-align: center;
   font-size: 28px;
   font-weight: 900;
-  margin: 2.81rem 3rem 0rem;
+  margin: 2.81rem 0rem 0rem;
+  padding: 0rem 3rem;
 }
 
 .desc-text {
-  margin: 1rem 3rem 1.8rem;
+  margin: 1rem 0rem 1.8rem;
+  padding: 0rem 3rem;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.63;
@@ -62,7 +64,7 @@ body {
 }
 
 .music-img {
-  margin: 0 1.25rem 0 0;
+  padding: 0 1.25rem 0 0;
 }
 .annual-div {
   display: flex;
@@ -84,13 +86,12 @@ body {
 }
 
 .change-btn {
-  margin-left: 5.875rem;
+  padding:0rem 0rem 0rem 5.875rem;
   font-size: 14px;
   font-weight: bold;
   text-align: left;
   color: #382ae1;
   border: none;
-  padding: 0;
   overflow: visible;
   background: transparent;
   text-decoration: underline;
