--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
   color: #1f2e55;
   flex-direction: column;
   text-align: center;
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: 900;
   margin: 2.81rem 0rem 0rem;
   padding: 0rem 3rem;
@@ -45,7 +45,7 @@ body {
 .desc-text {
   margin: 1rem 0rem 1.8rem;
   padding: 0rem 3rem;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 1.63;
   text-align: center;
@@ -71,7 +71,7 @@ body {
   flex-direction: column;
 }
 .annual-text {
-  font-size: 16px;
+  font-size: 1rem;
   margin: 0px;
   font-weight: 900;
   color: #1f2e55;
@@ -81,13 +81,13 @@ body {
   margin: 0.37rem 0px 0px 0px;
   text-align: left;
   color: #717fa6;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
 }
 
 .change-btn {
   padding:0rem 0rem 0rem 5.875rem;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: bold;
   text-align: left;
   color: #382ae1;
@@ -104,7 +104,7 @@ body {
   box-shadow: 0 1.25rem 1.25rem 0 rgba(56, 42, 225, 0.19);
   background-color: #382ae1;
   color: #fff;
-  font-size: 15px;
+  font-size: 0.938rem;
   font-weight: 900;
   text-align: left;
   text-align: center;
@@ -112,7 +112,7 @@ body {
 
 .cancel-btn {
   margin: 2rem 0px 3rem 0px;
-  font-size: 15px;
+  font-size:  0.938rem;
   font-weight: 900;
   align-self: center;
   color: #717fa6;
